// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRangeSummary renders normally 1`] = `
<div
  className="app-DateRangeSummary"
>
  <b>
    DateRangeSummary.title
  </b>
  <div
    className="app-DateRangeSummary__summaryDetails"
  >
    <div>
      <img
        alt="dateRangeSummaryCalendarIcon"
        className="app-DateRangeSummary__icon"
        src="test-file-stub"
      />
      <span>
        -
      </span>
    </div>
    <div>
      <img
        alt="dateRangeSummaryClockIcon"
        className="app-DateRangeSummary__icon"
        src="test-file-stub"
      />
      <span>
        -
      </span>
    </div>
    <div>
      <img
        alt="dateRangeSummaryClockIcon"
        className="app-DateRangeSummary__icon"
        src="test-file-stub"
      />
      <span>
        -
      </span>
    </div>
  </div>
</div>
`;

exports[`DateRangeSummary renders starting and ending times correctly 1`] = `
<div
  className="app-DateRangeSummary"
>
  <b>
    DateRangeSummary.title
  </b>
  <div
    className="app-DateRangeSummary__summaryDetails"
  >
    <div>
      <img
        alt="dateRangeSummaryCalendarIcon"
        className="app-DateRangeSummary__icon"
        src="test-file-stub"
      />
      <span>
        2020-02-01 - 2020-02-07
      </span>
    </div>
    <div>
      <img
        alt="dateRangeSummaryClockIcon"
        className="app-DateRangeSummary__icon"
        src="test-file-stub"
      />
      <span>
        00:00 - 00:00
      </span>
    </div>
    <div>
      <img
        alt="dateRangeSummaryClockIcon"
        className="app-DateRangeSummary__icon"
        src="test-file-stub"
      />
      <span>
        DateRangeSummary.days
      </span>
    </div>
  </div>
</div>
`;
